Cambios estéticos y gráficas faltantes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
             <h1>Energía Viva Escolar: Energías Renovables en Colombia</h1>
-            <p>Visualización interactiva sobre las energías renovables en el país.</p>
+            <p>Visualización interactiva sobre las energías renovables en el país</p>
         </header>
 
         <main>
@@ -19,6 +19,8 @@
                 <h2>Visualización de Datos de Energías Renovables</h2>
                 <div id="grafico-barra"></div> <!-- Gráfico de barras: Solar Generation -->
                 <div id="grafico-linea"></div> <!-- Gráfico de líneas: Wind Generation -->
+                <div id="grafico-barra-biomass"></div>
+                <div id="grafico-linea-hydro"></div>
             </section>
 
             <section id="simulador">
@@ -27,13 +29,13 @@
                     <label for="consumo">Consumo Energético (kWh):</label>
                     <input type="number" id="consumo" placeholder="Ingresa tu consumo en kWh" required>
                     <button type="submit">Calcular</button>
+                    <div id="resultado-simulador"></div> <!-- Resultado del simulador -->
                 </form>
-                <div id="resultado-simulador"></div> <!-- Resultado del simulador -->
             </section>
         </main>
 
         <footer>
-            <p>Desarrollado como parte del proyecto Talentotech Bootcamps - 2024</p>
+            <p>Desarrollado como parte del proyecto Talento Tech Bootcamps - 2024</p>
         </footer>
     </div>
 
