cambio de color en subtitulo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
             <h1>Energía Viva Escolar: Energías Renovables en Colombia</h1>
-            <p>Visualización interactiva sobre las energías renovables en el país</p>
+            <p class="subtitulo">Visualización interactiva sobre las energías renovables en el país</p> 
         </header>
 
         <main>
